# graphics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  framework
data/: patches.data  rocket.data
src/: draw.h  klein.cpp  main.cpp  pain.cpp  patches.cpp  readdata.cpp  rocket.cpp  teapot.cpp
src/graphics/: graphics.h  graphics_camera.h  graphics_fragment_program.h  graphics_framebuffer.h  graphics_rasterizer.h  graphics_render_pipeline.h  graphics_state.h  graphics_vertex_program.h  graphics_zbuffer.h
src/matrix/: columnvector.C  columnvector.h  debugmacros.h  matrix.C  matrix.h  quaternion.C  quaternion.h  real.C  real.h  rowvector.C  rowvector.h  trace.C  trace.h  typename.C  typename.h  vector.C  vector.h
src/solution/: bezier.h  camera.h  color.h  edge_rasterizer.h  fragment_program.h  interpolator.h  line_rasterizer.h  linear_interpolator.h  math_types.h  parser.h  point_rasterizer.h  subdivider.h  triangle.h  triangle_rasterizer.h  vertex_program.h
